--- a/public/css/site.css
+++ b/public/css/site.css
@@ -5,7 +5,7 @@ body::before{
     left:0;
     width: 100%;
     height:100%;
-    background-image: url("/images/aurora.jpg");
+    background-image: url("/images/background.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -236,7 +236,7 @@ a:hover,#learnMoreButton:hover{
 #pageContainer h3,
 #featureContainer h3{
     font-family: 'Oswald', sans-serif;
-    font-size:2em;
+    font-size:1.5em;
     color:var(--mainColour);
 }
 
@@ -264,7 +264,7 @@ a:hover,#learnMoreButton:hover{
 }
 
 #featureList p:hover{
-    color:var(--mainColour);
+    color:var(--secondaryColour);
 }
 
 #disclaimer{
