--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -1,27 +1,179 @@
+#logo{
+    position: absolute;
+    top:0.5rem;
+    left:0;
+    width:50px;
+}
+
 .flex-column{
-    padding:2rem;
-    justify-content: space-between;
-    height:70vh;
+    padding:1rem 2rem 0;
 }
 
 h1, h2, p{
     color:white;
+    text-align: center;
 }
 
 h1{
     font-size: 2rem;
+    margin-bottom:2rem;
 }
 
 h2{
     font-size: 1.1rem;
+    margin:1rem 0;
 }
 
 p{
+    font-size: 0.8rem;
     text-align: center;
-    margin:2rem 0;
+    margin-bottom:0.5rem;
 }
 
-a{
-    color:#61edff;
+.siteCard{
+    width:30vw;
+    height:200px;
+    overflow:hidden;
+    margin:0.3rem;
+    border-radius:5px;
+}
+
+.siteCard img{
+    width:100%;
+}
+
+#preview, #moreInfoPanel, #featureSection{
+    transform:translateX(100%);
+    transition:0.5s;
+    position:fixed;
+    top:0;
+    left:0;
+    width:100vw;
+    height:101vh;
+    z-index: 90;
+    background: black;
+}
+
+#moreInfoPanel{
+    z-index: 91;
+    transform: translateX(-100%);
+}
+
+#featureSection{
+    z-index: 92;
+    max-height: 101vh;
+    overflow-y: auto;
+    justify-content: flex-start;
+    padding-bottom:10vh;
+}
+
+#featureSection .flex-column{
+    padding:1rem 0.5rem 0;
+}
+
+#featureSection h3{
+    color:#e1e1e1;
+    text-align:center;
+    margin-bottom:0.3rem;
+}
+
+#featureSection p{
+    color:#a1a1a1;
+}
+#fullScreenImg{
+    height: 100%;
+    overflow: auto;
+}
+
+#fullScreenImg img{
+    width:100%;
+}
+
+#websiteLink, #moreInfo{
+    position:fixed;
+    z-index: 99;
+    bottom:0;
+    left:0;
+    width:120px;
+    padding:0.7rem 0;
+    background:white;
+    border-top:1px solid black;
+    border-bottom:none;
+    border-right:1px solid black;
+    border-left:none;
+    text-align: center;
+    border-radius: 0 10px 0 0;
     text-decoration: none;
+    color:black;
+    font-size: 1rem;
+    font-family: "Raleway";
+    transform:translateY(150%);
+    transition:0.5s;
+}
+
+#websiteLink{
+    left:unset;
+    right:0;
+    border-right: none;
+    border-left:1px solid black;
+    border-radius: 10px 0 0 0;
+}
+
+.backButton{
+    position: absolute;
+    top:0.5rem;
+    left:0.3rem;
+    font-size: 0.8rem;
+    background: white;
+    border:none;
+    box-shadow: 3px 3px 3px #0005;
+    padding:0.5rem 1rem;
+    border-radius: 5px;
+    transform:translateY(-150%);
+    transition:0.5s;
+    font-family: "Raleway";
+    z-index:99;
+}
+
+#moreInfoPanel{
+    padding:1rem;
+    justify-content: flex-start;
+}
+
+#moreInfoPanel h2{
+    font-family: 'Italianno', cursive;
+    font-size: 3em;
+    margin:0.5rem 0;
+}
+
+#moreInfoPanel h3{
+    font-family: 'Oswald', sans-serif;
+    color:#c1c1c1;
+    font-size: 1.2rem;
+}
+
+#pageList, #featureList{
+    width:80%;
+    max-height:15vh;
+    overflow-y: auto;
+    color:white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:0.5rem;
+    border:1px solid #fff8;
+    border-radius: 10px;
+    margin:1rem 0;
+}
+
+li{
+    list-style: none;
+    margin-bottom:0.3rem;
+    font-size: 0.8rem;
+    text-align: center;
+}
+
+#closeSidebar{
+    transition:0.3s;
+    transform: scale(0);
 }
